# apexline

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/: artifact-manifest-2025.json  canada-2025-analysis.csv  canada-2025-analysis.json  canada-2025-lap-diagnostics.json  circuit-polylines-2025.csv  circuit-polylines-2025.json  lap-diagnostics-2025.json
data/2025/all-events/r/: artifact-manifest.json  circuit-analysis.csv  circuit-analysis.json  lap-diagnostics.json
data/2025/canadian-grand-prix/r/: artifact-manifest.json  circuit-analysis.csv  circuit-analysis.json  lap-diagnostics.json
docs/: 2025-validation-summary.md  canada-2025-fastest-lap-eda.md  cross-validation-writeup.md  lap-compliance-2025.md  output-schemas.md  parameter-guide.md  rejected-lap-galleries-2025-r.md  rejected-lap-galleries-2025.md  showcase.md
docs/assets/rejected-laps-2025/: 01-australian-grand-prix.json  10-canadian-grand-prix.json  12-british-grand-prix.json  13-belgian-grand-prix.json
examples/: single-session.md
notebooks/: 2025-season-insights.ipynb
schemas/: artifact-manifest.schema.json  circuit-analysis-row.schema.json  lap-diagnostics-event.schema.json  rejected-lap-gallery.schema.json
scripts/: analyze_f1_circuit_gps.py  plot_canada_lap_examples.py  plot_rejected_lap_galleries.py  render_evidence.py  summarize_lap_diagnostics.py  summarize_validation.py
src/apexline/: __init__.py  analyze_f1_circuit_gps.py  artifacts.py  cli.py  fastf1_support.py  geometry.py  models.py  plot_canada_examples.py  plot_rejected_lap_galleries.py  render_evidence.py  schemas.py  sources.py  summarize.py  validation_summary.py
tests/: test_artifacts.py  test_cli.py  test_fastf1_support.py  test_geometry.py  test_integration_fastf1.py  test_schemas.py  test_smoke.py  test_validation_summary.py
